--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+.w-ctm{
+  width:12.5rem;
+  text-align: center;
+}
+.p-ctm{
+  padding: 1.25rem;
+}
 
 /*
 html,
