--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,6 +18,12 @@
   @apply max-w-4xl;
   @apply mx-auto;
   @apply font-sans;
+  @apply text-gray-700;
+}
+
+p{
+  @apply mb-4;
+  @apply text-lg;
 }
 
 /*
