--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,9 +22,14 @@
   @apply text-gray-700;
 }
 
-p{
+.article-section p{
+  
   @apply mb-4;
   @apply text-lg;
+}
+
+.article-section a{
+  @apply text-blue-600;
 }
 
 /*
