--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,8 +10,8 @@
   padding: 1.25rem;
 }
 
-.md\:-ml-20{
-  margin-left: -4.8rem !important;
+.md:-ml-20{
+  margin-left: -4.8rem;
 }
 
 .container-ctm{
