--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,7 +24,7 @@
 
 .article-section p{
   
-  @apply mb-4;
+  @apply mb-5;
   @apply text-lg;
 }
 
@@ -32,7 +32,7 @@
   @apply text-blue-600;
 }
 
-.article-section figure.kg-card{
+.article-section figure{
   @apply mt-10;
   @apply mb-10;
 }
@@ -41,16 +41,39 @@
   @apply text-4xl;
   @apply font-semibold;
   @apply leading-loose;
+  font-size: 1.1rem;
 }
+
+.article-section ul,
+.article-section ol{
+  @apply px-5;
+  @apply py-2;
+  @apply list-disc;
+  @apply leading-8;
+  font-size:1.1rem;
+  @apply mb-5;
+}
+
+
+.article-section ol{
+  @apply list-decimal;
+}
+
+.article-section li{
+}
+
 
 .article-section blockquote{
   font-style: italic;
+  font-size:1.1rem;
 }
 
 .article-section pre{
   @apply font-mono;
   @apply bg-gray-100;
   @apply p-4;
+  @apply my-4;
+  @apply border;
 }
 
 
