--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,7 +39,7 @@
 
 .article-section h2{
   @apply text-4xl;
-  @apply font-semibold;
+  @apply font-bold;
   @apply leading-loose;
 }
 
@@ -47,7 +47,6 @@
 .article-section ol{
   @apply px-5;
   @apply py-2;
-  @apply list-disc;
   @apply leading-8;
   font-size:1.1rem;
   @apply mb-5;
@@ -59,6 +58,7 @@
 }
 
 .article-section li{
+  @apply list-disc;
 }
 
 
